--- a/form.ui
+++ b/form.ui
@@ -53,7 +53,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>331</width>
+      <width>181</width>
       <height>21</height>
      </rect>
     </property>
@@ -189,7 +189,7 @@
      <rect>
       <x>10</x>
       <y>60</y>
-      <width>331</width>
+      <width>181</width>
       <height>21</height>
      </rect>
     </property>
@@ -202,7 +202,7 @@
      <rect>
       <x>10</x>
       <y>110</y>
-      <width>331</width>
+      <width>181</width>
       <height>21</height>
      </rect>
     </property>
@@ -335,7 +335,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Чьи строки сравнить?</string>
+      <string>Какие строки сравнить?</string>
      </property>
     </widget>
     <widget class="QCheckBox" name="checkBox">
