--- a/form.ui
+++ b/form.ui
@@ -440,9 +440,15 @@
     <property name="title">
      <string>Справка</string>
     </property>
+    <addaction name="action"/>
    </widget>
    <addaction name="menu"/>
   </widget>
+  <action name="action">
+   <property name="text">
+    <string>О программе</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
